--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "zod": "^3.22.4"
   }
 }
