--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "typescript": "^5.0.4"
   },
   "dependencies": {
